bin_PROGRAMS = testmain testCategory testNDC testbench

INCLUDES = -I../include

testmain_SOURCES = testmain.cpp
testmain_LDADD = ../src/liblog4cpp.la

testCategory_SOURCES = testCategory.cpp
testCategory_LDADD = ../src/liblog4cpp.la

testNDC_SOURCES = testNDC.cpp
testNDC_LDADD = ../src/liblog4cpp.la

testbench_SOURCES = Clock.cpp testbench.cpp 
testbench_LDADD = ../src/liblog4cpp.la
