bin_PROGRAMS = testmain testCategory testFixedContextCategory testNDC testbench

INCLUDES = -I../include

testmain_SOURCES = testmain.cpp
testmain_LDADD = ../src/liblog4cpp.la

testCategory_SOURCES = testCategory.cpp
testCategory_LDADD = ../src/liblog4cpp.la

testFixedContextCategory_SOURCES = testFixedContextCategory.cpp
testFixedContextCategory_LDADD = ../src/liblog4cpp.la

testNDC_SOURCES = testNDC.cpp
testNDC_LDADD = ../src/liblog4cpp.la

testbench_SOURCES = Clock.cpp Clock.hh testbench.cpp 
testbench_LDADD = ../src/liblog4cpp.la
