
liblog4cppincludedir = $(includedir)/log4cpp
liblog4cppinclude_HEADERS =  \
	Hints.hh \
	Appender.hh \
	AppenderSkeleton.hh \
	LayoutAppender.hh \
	FileAppender.hh \
	IdsaAppender.hh \
	OstreamAppender.hh \
	SyslogAppender.hh \
	Layout.hh \
	SimpleLayout.hh \
	BasicLayout.hh \
	Category.hh \
	HierarchyMaintainer.hh \
	LoggingEvent.hh \
	Priority.hh \
	NDC.hh \
	StreamUtil.hh \
	Log4cppCleanup.hh \
	Filter.hh \
	log4cpp-config.hh
