liblog4cppincludedir = $(includedir)/log4cpp
liblog4cppinclude_HEADERS =  \
	OstringStream.hh \
	Appender.hh \
	AppenderSkeleton.hh \
	LayoutAppender.hh \
	FileAppender.hh \
	IdsaAppender.hh \
	OstreamAppender.hh \
	SyslogAppender.hh \
	Layout.hh \
	SimpleLayout.hh \
	BasicLayout.hh \
	Category.hh \
	HierarchyMaintainer.hh \
	LoggingEvent.hh \
	Priority.hh \
	NDC.hh \
	OstringStream.hh \
	Log4cppCleanup.hh \
	Filter.hh \
 	Config.hh
