liblog4cppincludedir = $(includedir)/log4cpp
liblog4cppinclude_HEADERS =  \
	OstringStream.hh \
	Appender.hh \
	AppenderSkeleton.hh \
	FixedContextCategory.hh \
	LayoutAppender.hh \
	FileAppender.hh \
	IdsaAppender.hh \
	OstreamAppender.hh \
	StringQueueAppender.hh \
	SyslogAppender.hh \
	RemoteSyslogAppender.hh \
	Layout.hh \
	SimpleLayout.hh \
	BasicLayout.hh \
	PatternLayout.hh \
	Category.hh \
	CategoryStream.hh \
	HierarchyMaintainer.hh \
	SimpleConfigurator.hh \
	LoggingEvent.hh \
	Priority.hh \
	NDC.hh \
	OstringStream.hh \
	Log4cppCleanup.hh \
	TimeStamp.hh \
	Filter.hh \
	Export.hh \
	Portability.hh \
	config.h \
	config-win32.h \
	config-openvms.h

dist-hook:
	rm -f $(distdir)/config.h
